layout/base/MobileViewportManager.cpp
@@ -329,7 +329,7 @@ void MobileViewportManager::UpdateResolution(
   if (newZoom) {
     LayoutDeviceToLayerScale resolution = ZoomToResolution(*newZoom, cssToDev);
     MVM_LOG("%p: setting resolution %f\n", this, resolution.scale);
-    mPresShell->SetResolutionAndScaleTo(resolution.scale);
+    mPresShell->SetResolutionAndScaleTo(resolution.scale, nsGkAtoms::other);
 
     MVM_LOG("%p: New zoom is %f\n", this, newZoom->scale);
   }
